all tests + test6 passent. Test9 trop lent